@@ -1,6 +1,8 @@
 git  Will Entriken <cameralife AT phor.net>
 * Support Google Analytics
 * Create PHP code style guidelines and adopt
+* Add Facebook photo sharing
+* Validate HTML (Bootstrap theme)
 
 2.6.4  Will Entriken <cameralife AT phor.net>
 * Added support for OpenID login, this will be default soon
